# CGP-Library

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
app/: Makefile.am  Makefile.in  main.c
src/: Makefile.am  Makefile.in  cgp.c  cgp.h  libcgp-1.0.pc.in
